# DocFlowKit

./: .gitignore  CMakeLists.txt  README.md
backend/app/: main.py
frontend/: tsconfig.json
src/: main.cpp
src/infrastructure/pdf/: PdfService.cpp  PdfService.h
src/ui/: MainWindow.cpp  MainWindow.h
src/workers/: PdfPreviewWorker.cpp  PdfPreviewWorker.h
